--- a/WebAPI/Properties/launchSettings.json
+++ b/WebAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Cuisinier/ListCuisiniers",
+      "launchUrl": "api/User/ListUsers",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
