--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": " Server=(localdb)\\MSSQLLocalDB  ; Database=DBWebAPI; Trusted_Connection=True;"
+    "Default": " Server=DESKTOP-M0R30ER\\SQLEXPRESS  ; Database=DBWebAPI; Trusted_Connection=True;"
 
   },
   "Logging": {
